js/js.translator/testData/incremental/invalidation/updateExportsAndInlineImports/lib1/l1b.8.kt
inline fun fun2() = "fun2-8"
